--- a/res/layout/fragment_jzfh.xml
+++ b/res/layout/fragment_jzfh.xml
@@ -1,7 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-</LinearLayout>
+    <HorizontalScrollView
+        android:id="@+id/indicatorHSV"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:fadingEdge="none"
+        android:scrollbars="none"
+        android:visibility="gone" >
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top" >
+
+            <RadioGroup
+                android:id="@+id/indicatorRG"
+                android:layout_width="match_parent"
+                android:layout_height="40dip"
+                android:layout_alignParentTop="true"
+                android:orientation="horizontal" >
+            </RadioGroup>
+
+            <ImageView
+                android:id="@+id/indicatorIV"
+                android:layout_width="1dp"
+                android:layout_height="5dp"
+                android:layout_alignParentBottom="true"
+                android:scaleType="matrix" />
+        </RelativeLayout>
+    </HorizontalScrollView>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/indicatorHSV" />
+
+</RelativeLayout>
