--- a/res/layout/fragment_date_statistics.xml
+++ b/res/layout/fragment_date_statistics.xml
@@ -28,14 +28,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal" >
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:src="@drawable/data_statistics" />
+            android:src="@drawable/green_data" />
 
         <ImageView
             android:layout_width="wrap_content"
