--- a/res/layout/fragment_season.xml
+++ b/res/layout/fragment_season.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/seasonChart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
