--- a/res/layout/fragment_month.xml
+++ b/res/layout/fragment_month.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/monthChart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
