--- a/res/layout/activity_data_statistics.xml
+++ b/res/layout/activity_data_statistics.xml
@@ -153,6 +153,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
+                    android:id="@+id/jzfhTabIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -173,6 +174,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
+                    android:id="@+id/fdlTabIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -193,6 +195,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
+                    android:id="@+id/fdmhTabIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -213,6 +216,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
+                    android:id="@+id/gdmhTabIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
