--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
+                    android:id="@+id/dsTabIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -66,6 +67,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
+                    android:id="@+id/ucTabIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
