--- a/res/layout/fragment_date_statistics.xml
+++ b/res/layout/fragment_date_statistics.xml
@@ -32,6 +32,7 @@
         android:orientation="horizontal" >
 
         <ImageView
+            android:id="@+id/gdIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
