--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,6 +4,13 @@
 
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:windowNoTitle">true</item>
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
     </style>
 
-</resources>
+    <style name="activityAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/move_right_in_activity</item>
+        <item name="android:activityOpenExitAnimation">@anim/move_left_out_activity</item>
+        <item name="android:activityCloseEnterAnimation">@anim/move_left_in_activity</item>
+        <item name="android:activityCloseExitAnimation">@anim/move_right_out_activity</item>
+    </style>
+</resources>
