--- a/res/layout/activity_green_data.xml
+++ b/res/layout/activity_green_data.xml
@@ -31,8 +31,11 @@
             android:textSize="25sp" />
     </RelativeLayout>
 
-    <LinearLayout 
-        android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:background="@drawable/greendata"></LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="20dp"
+        android:src="@drawable/greendata" />
+
 </LinearLayout>
