--- a/res/layout/activity_index_list.xml
+++ b/res/layout/activity_index_list.xml
@@ -31,8 +31,16 @@
             android:textSize="25sp" />
     </RelativeLayout>
 
-    <LinearLayout 
+    <GridView
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:background="@drawable/indexlist"></LinearLayout>
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
+        android:paddingTop="20dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="30dp" />
+
 </LinearLayout>
