--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,11 +9,12 @@
     <color name="transparent">#00000000</color>
     
     <color name="bg_color">#efefef</color>
+    <color name="other_bg_color">#F2DCB5</color>
     <color name="top_bg_color">#27bdff</color>
     <color name="user_center_line">#6c6c6c</color>
 
     <color name="fen_data_color">#ff0000</color>
     <color name="other_data_color">#00bc0d</color>
     <color name="index_line_color">#27bdff</color>
-    
+
 </resources>
