--- a/res/layout/activity_data_statistics.xml
+++ b/res/layout/activity_data_statistics.xml
@@ -41,7 +41,7 @@
             android:paddingRight="5dp" >
 
             <TextView
-                android:id="@+id/jizu"
+                android:id="@+id/currjzTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
