--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,10 +8,10 @@
     </style>
 
     <style name="activityAnimation" parent="@android:style/Animation">
-        <item name="android:activityOpenEnterAnimation">@anim/move_right_in_activity</item>
-        <item name="android:activityOpenExitAnimation">@anim/move_left_out_activity</item>
-        <item name="android:activityCloseEnterAnimation">@anim/move_left_in_activity</item>
-        <item name="android:activityCloseExitAnimation">@anim/move_right_out_activity</item>
+        <item name="android:activityOpenEnterAnimation">@anim/push_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/push_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/push_left_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/push_right_out</item>
     </style>
 
 </resources>
