--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -34,9 +34,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/login_img_user"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/login_img_user"
-            android:background="@android:color/white" 
-            android:text="Admin"/>
+            android:background="@android:color/white"
+            android:text="Admin" />
 
         <ImageView
             android:id="@+id/login_img_pswd"
@@ -52,8 +53,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/login_img_pswd"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/login_img_pswd"
-            android:background="@android:color/white" 
+            android:background="@android:color/white"
             android:text="sygpassword" />
     </RelativeLayout>
 
