--- a/res/layout/activity_data_statistics.xml
+++ b/res/layout/activity_data_statistics.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/top_bg_color"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" >
+        android:paddingLeft="@dimen/title_margin"
+        android:paddingRight="@dimen/title_margin" >
 
         <ImageView
             android:id="@+id/backIV"
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
             android:text="@string/jizufuhe"
             android:textColor="@color/white"
             android:textSize="25sp" />
@@ -63,19 +63,33 @@
         android:paddingLeft="20dp"
         android:paddingTop="5dp" >
 
-        <TextView
-            android:id="@+id/descTV"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/descLL"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="分时数据"
-            android:textColor="@color/black"
-            android:textSize="17sp" />
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/descTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="分时数据"
+                android:textColor="@color/black"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/dateTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:textColor="@color/black"                android:textSize="17sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/oneDataLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/descTV"
+            android:layout_below="@id/descLL"
             android:orientation="horizontal"
             android:paddingTop="10dp" >
 
