--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
+            android:paddingBottom="@dimen/title_margin"
+            android:paddingTop="@dimen/title_margin"
             android:text="@string/weijiece"
             android:textColor="@color/white"
             android:textSize="25sp" />
