--- a/res/layout/fragment_user_center.xml
+++ b/res/layout/fragment_user_center.xml
@@ -55,7 +55,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/clear_data"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -63,7 +64,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="10dp"
                 android:background="@color/user_center_line" />
 
             <ImageView
